standardize string building